@@ -8,6 +8,7 @@ XMPP4R 0.3.3 (XX/XX/XXXX)
 * File transfer fixes
 * MUC room configuration fixes
 * initial support for XEP-0118 User Tune
+^ fix for an xmlrpc exception-during-serialisation bug, which would cause a hang
 
 XMPP4R 0.3.2 (15/10/2007)
 =========================
